--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Blueprints/Levels/Main.Main
 
 
 EditorStartupMap=/Game/Blueprints/Levels/Main.Main
+GameInstanceClass=/Game/Blueprints/Instance/BP_BrickGameInstance.BP_BrickGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
